--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=backend
-spring.security.user.name=admin
-spring.security.user.password=123456
+spring.ai.openai.api-key=${OPENAI_API_KEY}
+spring.ai.openai.enabled=false
