--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,27 @@
 spring.application.name=backend
+
+# OpenAI (отключено)
 spring.ai.openai.api-key=${OPENAI_API_KEY}
 spring.ai.openai.enabled=false
 
+# PostgreSQL
 spring.datasource.url=jdbc:postgresql://postgres.railway.internal:5432/railway
 spring.datasource.username=postgres
 spring.datasource.password=AlXWveLHELGCugXfKxfSoZjMfAjNvNKY
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Server port
 server.port=8080
 
+# Gmail SMTP Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
+spring.mail.protocol=smtp
 spring.mail.username=VerifPharmacy@gmail.com
 spring.mail.password=fckcylvuprnhlxjy
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.debug=true
