--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
     	<artifactId>lombok</artifactId>
     	<scope>provided</scope>
 	</dependency>
+	<dependency>
+  		<groupId>org.locationtech.jts</groupId>
+  		<artifactId>jts-core</artifactId>
+  		<version>1.19.0</version>
+	</dependency>
+
 
 	<dependency>
     	<groupId>org.springframework.boot</groupId>
