+ndvi on the map

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,9 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.debug=true
+
+# Sentinel Hub API Credentials
+sentinelhub.auth.url=https://services.sentinel-hub.com/oauth/token
+sentinelhub.process.url=https://services.sentinel-hub.com/api/v1/statistics
+sentinelhub.client.id=08334a15-ece3-4d02-9bb4-a0e436612327
+sentinelhub.client.secret=E2fiZilL0t32ZQB4HrxUc70Ygp74VHm2
