--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
 		<artifactId>spring-boot-starter-data-jpa</artifactId>
 	</dependency>
 	<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.16.1</version> <!-- Используйте актуальную версию -->
+</dependency>
+	<dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-security</artifactId>
 	</dependency>
